--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ POSTGRES_HOST_AUTH_METHOD=trust
 DATABASE_URL=postgres://user:password@db:5432/test
 
 # web-client
-NUXT_PUBLIC_API_URL=http://server:4000/api/
+NUXT_PUBLIC_API_URL=http://server:4000/api
+NUXT_PUBLIC_SERVER_API_URL=http://server:4000/api
 WEB_CLIENT_PORT=3000
 SERVER_PORT=4000
