--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,8 @@ services:
       - gitmirrors
     environment:
       NUXT_PUBLIC_API_URL: ${NUXT_PUBLIC_API_URL}
+      NUXT_PUBLIC_SERVER_API_URL: ${NUXT_PUBLIC_SERVER_API_URL}
+
   db:
     image: postgres:14.4
     ports:
