--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,3 +15,5 @@ dotenv = "0.15.0"
 serde = "1.0.219"
 chrono = { version = "0.4.41", features = ["serde"] }
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
+rand = "0.9.1"
+async-trait = "0.1.88"
