--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,7 @@ version: "3.8"
 
 services:
   server:
+    user: "${UID}:${GID}"
     build:
       context: ./server
       dockerfile: Dockerfile.dev
@@ -17,7 +18,9 @@ services:
       POSTGRES_PORT: ${POSTGRES_PORT}
       ROCKET_ENV: ${ROCKET_ENV}
       DATABASE_URL: ${DATABASE_URL}
+
   web-client:
+    user: "${UID}:${GID}"
     build:
       context: ./web-client
       dockerfile: Dockerfile.dev
@@ -44,6 +47,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST_AUTH_METHOD=${POSTGRES_HOST_AUTH_METHOD}
+
 networks:
   gitmirrors:
     driver: bridge
