--- a/web-client/Dockerfile
+++ b/web-client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:22-alpine as builder
+FROM node:22-slim as builder
 
 WORKDIR /app
 
@@ -9,7 +9,7 @@ COPY . .
 RUN yarn build
 
 
-FROM node:22-alpine AS runner
+FROM node:22-slim AS runner
 
 ENV NODE_ENV=production
 
