--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -8,6 +8,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   libpq-dev \
   curl \
   git \
+  openssh-client \
   ca-certificates \
   postgresql-client \
   && rm -rf /var/lib/apt/lists/*
