--- a/web-client/package.json
+++ b/web-client/package.json
@@ -16,12 +16,14 @@
     "@nuxt/image": "1.10.0",
     "@pinia/nuxt": "^0.11.1",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "sass-loader": "^16.0.5",
     "vue": "^3.5.17",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   },
