--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,28 @@
-# TODO: dont use alpine and move to slim
+FROM rust:1.87-slim as builder
 
-FROM rust:1.87-alpine AS builder
-RUN apk add --no-cache musl-dev openssl openssl-dev pkgconfig git
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  pkg-config libssl-dev libpq-dev ca-certificates curl git \
+  && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /usr/src/app
+
+COPY Cargo.toml Cargo.lock ./
+RUN mkdir src && echo "fn main() {}" > src/main.rs
+RUN cargo build --release && rm -r src
+
 COPY . .
 RUN cargo build --release
 
-FROM alpine:3.17 AS runtime
-RUN apk add --no-cache openssl ca-certificates
-WORKDIR /app
-COPY --from=builder /usr/src/app/target/release/server ./server
-COPY Rocket.toml ./
-EXPOSE 4000
+FROM debian:bookworm-slim
 
-COPY entrypoint.sh /usr/src/server/entrypoint.sh
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  libssl3 libpq5 ca-certificates \
+  && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /usr/src/app
+COPY --from=builder /usr/src/app/target/release/server /usr/src/app/server
+COPY entrypoint.sh /usr/src/app/entrypoint.sh
+
+RUN chmod +x /usr/src/app/entrypoint.sh
+
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
