--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,45 @@ version: "3.8"
 
 services:
   server:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
+    image: "ioalexander/gitmirrors-backend:latest"
     ports:
-      - "4000:4000"
+      - "${SERVER_PORT}:${SERVER_PORT}"
     networks:
       - gitmirrors
     environment:
+      SERVER_PORT: ${SERVER_PORT}
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
       ROCKET_ENV: ${ROCKET_ENV}
       DATABASE_URL: ${DATABASE_URL}
 
   web-client:
-    build:
-      context: ./web-client
-      dockerfile: Dockerfile
+    image: "ioalexander/gitmirrors-frontend:latest"
     ports:
-      - "3000:3000"
+      - "${WEB_CLIENT_PORT}:${WEB_CLIENT_PORT}"
     networks:
       - gitmirrors
     environment:
       NUXT_PUBLIC_API_URL: ${NUXT_PUBLIC_API_URL}
       NUXT_PUBLIC_SERVER_API_URL: ${NUXT_PUBLIC_SERVER_API_URL}
 
+  db:
+    image: postgres:14.4
+    ports:
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    networks:
+      - gitmirrors
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST_AUTH_METHOD: ${POSTGRES_HOST_AUTH_METHOD}
+
 networks:
   gitmirrors:
     driver: bridge
+
+volumes:
+  pg_data:
