--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 # server
 ROCKET_ENV=production
+ROCKET_ADDRESS="0.0.0.0"
 POSTGRES_HOST="db"
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password # change password if using in production
