--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,7 @@ services:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
       ROCKET_ENV: ${ROCKET_ENV}
+      ROCKET_ADDRESS: ${ROCKET_ADDRESS}
       DATABASE_URL: ${DATABASE_URL}
 
   web-client:
