--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ POSTGRES_DB=test
 POSTGRES_PORT=5432
 POSTGRES_HOST_AUTH_METHOD=trust
 DATABASE_URL=postgres://user:password@db:5432/test
+CORS_URL=http://localhost:3000,http://localhost:4000,https://example.com
 
 # web-client
 NUXT_PUBLIC_API_URL=http://server:4000/api
