--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,4 @@ base64 = "0.22.1"
 validator = { version = "0.20.0", features = ["derive"] }
 tokio = { version = "1.46.1", features = ["full", "process"] }
 futures = "0.3.31"
+rocket_cors = "0.6.0"
